fixed acorn vulnerability

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@google-cloud/vision": "^1.11.0",
+    "acorn": "^7.1.1",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
